Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37061

QBluetoothSocket's inputthread crashes occasionaly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.3.0
    • None
    • Android

      The input stream thread cashes when closing the inputstream QThread. In particular this seems to happen when the device turns display off.
      It seems any blocking java call in a QThread does not reliably wake up. A simialr behavior was seen in QTBUG-36754.

      Crash log:

      D/Qt (17749): ../bttestui/btlocaldevice.cpp:397 (void BtLocalDevice::socketError(QBluetoothSocket::SocketError)): ###### Socket error QBluetoothSocket::NetworkError "Network error during read"
      D/Qt (17749): ../bttestui/btlocaldevice.cpp:402 (void BtLocalDevice::socketStateChanged(QBluetoothSocket::SocketState)): ###### Socket state QBluetoothSocket::UnconnectedState
      D/Qt (17749): ../bttestui/btlocaldevice.cpp:572 (void BtLocalDevice::clientSocketDisconnected()): ###### Removing server socket connection
      W/dalvikvm(17749): Invalid indirect reference 0x79545d78 in decodeIndirectRef
      I/dalvikvm(17749): "Thread-323" prio=5 tid=15 RUNNABLE
      I/dalvikvm(17749): | group="main" sCount=0 dsCount=0 obj=0x41e77758 self=0x7953fc78
      I/dalvikvm(17749): | sysTid=18169 nice=0 sched=0/0 cgrp=apps handle=2035546672
      I/dalvikvm(17749): | state=R schedstat=( 0 0 0 ) utm=0 stm=0 core=0
      I/dalvikvm(17749): at dalvik.system.NativeStart.run(Native Method)
      I/dalvikvm(17749):
      E/dalvikvm(17749): VM aborting

        For Gerrit Dashboard: QTBUG-37061
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes