src/android/bluetooth/bluetooth.pri
@@ -6,7 +6,8 @@ PATHPREFIX = $$PWD/src/org/qtproject/qt5/android/bluetooth
 JAVACLASSPATH += $$PWD/src/
 JAVASOURCES += \
     $$PATHPREFIX/QtBluetoothBroadcastReceiver.java \
-    $$PATHPREFIX/QtBluetoothSocketServer.java
+    $$PATHPREFIX/QtBluetoothSocketServer.java \
+    $$PATHPREFIX/QtBluetoothInputStreamThread.java
 
 
 # install
